# Rollo

./: .gitignore  README.md  description.md  package-lock.json  package.json  rename-folder-to-Rollo.bat  server.js  start-rollo.bat
android/: .gitignore  README.md  build-release.ps1  gradle.properties  keystore.properties.example  settings.gradle.kts  setup-libnode.ps1  setup-libnode.sh  setup-release-keystore.ps1  setup-release-keystore.sh
android/app/src/main/cpp/: CMakeLists.txt  node_runner.cpp
docs/: APP-STRUCTURE.md  ISSUES-AND-ENHANCEMENTS.md  ISSUES-REMAINING.md  README.md
launcher/: build-launcher.bat
lib/: android-downloader.js  basic-auth.js  bin-finder.js  conflict-merge.js  downloader.js  groups.js  media.js  metadata.js  network.js  probe.js  sync-hints.js  thumbs.js  video-secret.js  x-session.js
public/: a11y.css  anchored-tag-palette.css  anchored-tag-palette.js  bottom-nav.css  bottom-nav.js  connect.css  connect.html  download.html  feed-extras.js  groups.js  heart.css  hearts.js  i18n.js  icons.css  icons.js  index.html  layout-metrics.js  manifest.json  media-duration.js  media-helpers-fallback.js  media-helpers.js  media.js  network-speed.css  network-speed.js  press-radial-menu.css  press-radial-menu.js  profile-chrome.css  profile-extras.css  profile-extras.js  pwa.js  rolloreader.css  rolloreader.html  rolloreader.js  servers.js  settings.css  settings.html  settings.js  sw.js  tag-colors.js  test-footer.html  (+9 more)
scripts/: generate-precache.js  generate-pwa-icons.mjs  sync-android-assets.js
test/: api.smoke.test.js  downloader.test.js  (+2 more)
(+39 files in other folders)
